# ChangeLog for net-print/cups
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-print/cups/ChangeLog,v 1.462 2012/04/23 22:16:48 dilfridge Exp $

  23 Apr 2012; Andreas K. Huettel <dilfridge@gentoo.org> cups-1.5.2-r3.ebuild,
  +files/cups-1.5.2-threads.patch, +files/cups-1.5.2-threads2.patch:
  Add backport patch for building without thread support, bug 401323

  21 Apr 2012; Andreas K. Huettel <dilfridge@gentoo.org> cups-1.5.2-r3.ebuild:
  Fix build with USE=-systemd, thanks Arfrever

*cups-1.5.2-r3 (20 Apr 2012)

  20 Apr 2012; Andreas K. Huettel <dilfridge@gentoo.org> +cups-1.5.2-r3.ebuild,
  metadata.xml:
  Add systemd useflag and dependency, install unit files properly. Should
  finally fix bug 407975. Patch by Michal Gorny.

  19 Apr 2012; Andreas K. Huettel <dilfridge@gentoo.org> -cups-1.5.0-r4.ebuild,
  -cups-1.5.2-r1.ebuild:
  Remove old

  19 Apr 2012; Andreas K. Huettel <dilfridge@gentoo.org> cups-1.5.2-r2.ebuild,
  +files/cups-1.5.2-linkperl.patch:
  Link perl module properly if cups is not installed yet, bug 398277

  18 Apr 2012; Andreas K. Huettel <dilfridge@gentoo.org> cups-1.5.2-r2.ebuild:
  Set systemd unit dir correctly, bug 407975

  18 Apr 2012; Andreas K. Huettel <dilfridge@gentoo.org> cups-1.5.2-r2.ebuild,
  +files/cups-1.5.2-browsing.patch:
  Switch browsing off by default, bug 401927

*cups-1.5.2-r2 (18 Apr 2012)

  18 Apr 2012; Andreas K. Huettel <dilfridge@gentoo.org> +cups-1.5.2-r2.ebuild:
  Add avahi support (patch from Debian), as this will be included in 1.6
  anyway; bug 374153

  08 Feb 2012; Jeroen Roovers <jer@gentoo.org> cups-1.5.0-r4.ebuild,
  cups-1.5.2-r1.ebuild:
  Marked ~hppa (bug #401067).

  07 Feb 2012; Andreas K. Huettel <dilfridge@gentoo.org> cups-1.5.2-r1.ebuild:
  Drop php scripting support; it is unmaintained by upstream, has already been
  removed in trunk, and displays build failures with recent php. Bug 388105

*cups-1.5.2-r1 (07 Feb 2012)
