@@ -25,24 +25,23 @@ DIST cups-1.5.2-ipp-r8950.patch.bz2 19525 RMD160 346a3141ae445dc9f17c7fbc0a467ae
 DIST cups-1.5.2-source.tar.bz2 9595665 RMD160 98181e2ee8c6e574fb6d405f688f52c9b61a2355 SHA1 56fdb4f58e676607845321c0296c1e90e416883f SHA256 b150aa108c631f4f07e92cb13c01263a67170e5ac8383c5548ef8f8473a187fb
 EBUILD cups-1.4.8-r1.ebuild 7242 RMD160 bf1997ca1d9b9b11066c2bb963cc8b54ea5c8f2a SHA1 a15340529eecbbc8a95392d2f1b508cfb4caa47e SHA256 77271eb2ea0dd120801a4b1e5381ea4859e80375d9587f83ec3f4c37ab8868c8
 EBUILD cups-1.4.8-r23.ebuild 8852 RMD160 c50b3b77403cf6c724fcfd05c8ef173808066629 SHA1 c4aa7016bb5a1279bf446f41c09b9a93d5b87ff2 SHA256 1798aed0e2760c6a92a7c4e3631170989d984ac36908b369c37c43bfdab3cd6d
-EBUILD cups-1.5.2-r2.ebuild 8175 RMD160 b8043f29843c75c2b55085417cfc21a1db9db503 SHA1 a196e7c91ff5ea81b2ea2dfb4d598ea6541a24a8 SHA256 7a9a31d4b3a48ca207f9292255d3601f08981fdb4c276db712ffe87e6b1dc5b0
 EBUILD cups-1.5.2-r3.ebuild 8582 RMD160 df1dd83f03d51d9aea267a5a0b153097febdd0ba SHA1 6ffb03f119afe631d5f91b0f15ba04e302ec23ba SHA256 0d1c5f9327882c58121230ae36cbb75a91b4d93b6a3e97813a5ea5a5c295ba2b
-MISC ChangeLog 70438 RMD160 f11b6ff42aad8a04c535725471de306cf3dabb82 SHA1 cf92a2aa5ff7d8d9545f992cafe0b7aafa4377f6 SHA256 e10b2608f1bfd8b90f41366c80cf1348c335ecbc9862527c24aefe18d07b0a10
+MISC ChangeLog 70532 RMD160 060c7d4733aac59134d20571ec92ad993c4530b8 SHA1 3c59dd97151c9d1e5ad3225846a15b4d596eacaa SHA256 03d35fde6c3902cb0e1ff7c53ce2bd84dec306a9dd343058cc67aaab3dae7a84
 MISC metadata.xml 778 RMD160 39d95458b469079b683adf4f2e79eb0b803ce0b9 SHA1 62b298bb9c5435716ce81550213ccd086ec065aa SHA256 26a8d1221a4334579f98705c38f3e3a882c223df86181dcf7968eac2118188b8
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBCgAGBQJPldTxAAoJENwGBM22xffe5N8P/iGlWrOyhhfZCfkiQagM8Npu
-Y1O0CmpdCAcKjKbaI96bLoS4uUopm4/jPvjyG7Xx8puywyv/ah3+RWTODYvHKEPp
-kqjXgO9N2YiVw4HjbPwPEpZsKaeCah0ZRLf0EwPEfzN5f1xPIeZZzMRe5nDhw+dA
-9P5tYb7+KvtlrcFtPGpkDOeT9+AyUhDrT1L4OGEQZqmoHufSXdGzwiMtsYIv4oeV
-EAlVPAX5TjCD4f8Gi4cOYngSgzKPsbvHi+TS89jKUNkjtiJd5FbtQqAGfw8HLcHV
-Doqg+tqEWvgYYPf2lSKnYwjHFGSA1m9QZg3ydSPn0FPDPOob/NgZSJw2gsqjEHgr
-elIA4JjCWb4OkeDe3X+BV7daCmuIu8nfJOx1PdccMGoARSuTcls0fq3KQLgSmIDE
-5HpgjaXnft39hKyxdy8zoSJZldiJ+Q4sFYSDf/AcvK066GYbZxo8kwYX36AKtEjO
-dFJf9MP5ibv/oIDeEFYAic09a8yQ3cVHd3rcuHGTJQiPPz0+sizDDnCq5TBrKF43
-2tGQtQhgz2rbv9BI5wcCMgCaCBCVekAzaKz26NTT8Q4PpvDyicM4m7nJIozJ+u09
-Nj5CViAsvcPcnnUkpPoWXKh/TtyV9znHxiU7LDdA5RGuLYgVLMlBz3hR2ifGUzzl
-iPLCvYFIgYOqZgpU7vQd
-=U340
+iQIcBAEBCgAGBQJPldUoAAoJENwGBM22xffeGqQP/3YUeL3vXW4sIeAMqcFidf3E
+JUVNymV9fiI080b2PdOJrHMuxUsKu1uKndRAhxXthRcfpcrk7kJGuSgwynUV+u4h
+yM5BwnTcuA/slh1N1Ftr89ZvfnEdmMQXGQ8ZLq9nqsWT+h7N3Gbye5dgSk6SFviX
+35M185SzvnJziO3MtM/IeMoaf+udwaQTmbTiv79bcetLz/9HAzU+9iNrCVbq+6bY
+1hTzi9VDquZacQjTv+Ok2Eykhc8LuqLmHg7yE3BhDRoPn2K7BecEHNC6Po95WCV9
+uSeUu6n+rteiIVP9IDqXhndqDDsNkY14AjxuppblkMJj6GFb8OfhlTnS2GtN3jzd
+y/IgNrvItE0xC4KM5oEuhfyZxv54DoqQKIuKdwuFvIdrepCsAZPifoQH+3r6JWPn
+2WC+StVAwwiKoi/WGuc8DsfPd21+w8O+c9OjFSEIbMGItamG/kWqQ+o14ENnmRmc
+NYEt97Tt8VHiLpV0NU5+IS+gRMlwTScrCDDFmcKQZtfLi8jMEw+ZtpOKjA4IxHxh
+SEPHpBrTYQAGPpVBxbYv77vZQN+UxDNXZt7o/jA1hrUin6/KvaYD2Lc0eYg91sNP
+rFhE64CK6aSz9wlhuI0zPzFn5t/bTB6fEHVACdY6eqAPVzxqzlAWyI00bfBKkVlM
+rp7bozFT/tixYIoO0qiJ
+=6+r3
 -----END PGP SIGNATURE-----
